deployment-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: nginx-hello
