deployment-demo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt
  name: nginx-hello
spec:
  ingressClassName: nginx
  rules:
  - host: &host nginx-hello.wdcdemo.runs.onstackit.cloud
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-hello
            port:
              number: 80
  tls:
  - hosts:
    - *host
    secretName: nginx-hello-tls
